# moleculer-rs

./: .gitignore  CHANGELOG.md  Cargo.toml
examples/: http_client.rs  http_server.rs  http_standalone.rs  http_transporter_client_server.rs  http_transporter_example.rs
src/: broker.rs  channels.rs  config.rs  data_structures.rs  http_transporter.rs  lib.rs  service.rs
src/channels/: disconnect.rs  discover.rs  event.rs  heartbeat.rs  info.rs  ping.rs  pong.rs  request.rs  response.rs
src/transporter/: http_transport.rs  mod.rs  nats_transport.rs
supertonic/: Cargo.toml  README.md  demo.sh  helpers.rs
tests/: http_integration_test.rs
